--- a/frontFarm/src/app/components/header/header.component.html
+++ b/frontFarm/src/app/components/header/header.component.html
@@ -10,13 +10,13 @@
     <span *ngIf="farmaciaNombre" class="site-sucursal">{{farmaciaNombre}}</span>
   </div>
 
-  <div class="header-center">
+  <!-- <div class="header-center">
     <input type="text" [(ngModel)]="searchQuery" placeholder="¿Qué estás buscando?" class="search-input" />
     <button *ngIf="searchQuery" (click)="clearSearch()" class="clear-button">✖</button>
     <button class="search-button">
       <mat-icon>search</mat-icon>
     </button>
-  </div>
+  </div> -->
 
   <!-- 🔹 DERECHA: Sesión -->
   <div class="header-right">
