--- a/frontFarm/src/styles.css
+++ b/frontFarm/src/styles.css
@@ -424,3 +424,5 @@ button {
 .productos-header-lineBottom {
   border-bottom: 1px solid black;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
