deploy(all): fix grabar venta + ajustes swal alert

--- a/frontFarm/src/app/impresiones/ticket-footer/ticket-footer.component.html
+++ b/frontFarm/src/app/impresiones/ticket-footer/ticket-footer.component.html
@@ -1,4 +1,4 @@
-  <div class="mensaje-final" style="font-style: oblique;">
+  <div class="mensaje-final" style="font-style: oblique; font-size: 18px; ">
     ¡Gracias por su preferencia!<br />
     Bienestar para todos<br />
   </div>
