--- a/frontFarm/src/app/impresiones/ticket-header/ticket-header.component.html
+++ b/frontFarm/src/app/impresiones/ticket-header/ticket-header.component.html
@@ -1,4 +1,4 @@
-<div class="ticket-header">
+<div class="lineBottom">
   <div class="encabezado-flex">
     <img src="assets/images/farmBienIcon.png" alt="Logo" class="logo logo-ticket"/>
     <div>
@@ -7,7 +7,7 @@
     </div>
   </div>
 
-  <div class="datos-farmacia">
+  <div class="datos-farmacia" style="font-size: 16px;">
     Sucursal: {{ nombreFarmacia }}<br/>
     {{ direccion }}<br />
     Teléfono: {{ telefono }}
