--- a/frontFarm/src/app/pages/inicio-turno/inicio-turno.component.html
+++ b/frontFarm/src/app/pages/inicio-turno/inicio-turno.component.html
@@ -23,8 +23,7 @@
   <!-- 🔹 Si hay corte activo -->
   <div *ngIf="corteActivo && !mostrarFormulario" class="card p-4 shadow">
     <h2 class="titulo mb-4">Turno activo</h2>
-    <p class="subtitulo"><strong>Fecha de inicio:</strong> {{ corteActivo.fechaInicio | date: 'dd/MM/yyyy
-      HH:mm':'America/Mexico_City' }} hrs.</p>
+    <p class="subtitulo"><strong>Fecha de inicio:</strong> {{ corteActivo.fechaInicio | date: 'dd/MM/yyyy HH:mm':'America/Mexico_City' }} hrs.</p>
     <p class="subtitulo"><strong>Efectivo inicial:</strong> ${{ corteActivo.efectivoInicial | number:'1.2-2' }}</p>
 
     <button class="btn-gris" (click)="finalizarTurno()">
