Cambios en login-inicio de turno-recargas

--- a/frontFarm/src/app/admin/corte-detalle-dialog/corte-detalle-dialog.component.html
+++ b/frontFarm/src/app/admin/corte-detalle-dialog/corte-detalle-dialog.component.html
@@ -166,11 +166,11 @@
     <mat-dialog-actions align="end">
         <!-- Botón visible solo en modo CERRADO y si se puede autorizar hoy -->
         <!-- <button mat-raised-button color="primary" -->
-        <button class="btn-amarillo" style="margin-right: 20px;"
+        <!-- <button class="btn-amarillo" style="margin-right: 20px;"
             *ngIf="data.modo === 'cerrado' && data.puedeAutorizarTurnoExtra" (click)="autorizarTurnoExtra()"
             [disabled]="cargando">
             Autorizar turno extra
-        </button>
+        </button> -->
 
         <!-- Botón visible solo en modo PREVIO -->
         <!-- <button mat-raised-button color="accent" -->
